fix: layout shifting after terminal loads

--- a/numbat-wasm/www/main.css
+++ b/numbat-wasm/www/main.css
@@ -40,6 +40,26 @@ p.links a {
     color: #666;
 }
 
+#skeleton-loader {
+  animation: skeleton-loading 1.5s infinite;
+  background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%);
+  background-size: 200% 100%;
+  height: 550px;
+  margin-bottom: 2em;
+  width: 100%;
+}
+@keyframes skeleton-loading {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
+  }
+}
+.hidden {
+  display: none;
+}
+
 #terminal {
     border-radius: 4px;
     box-shadow: 0px 3px 8px #1a1a1a;
